--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body{
-  background: image-url('backimage.JPG');
-  background-size: cover;
-  background-position: center;
-}
+// body{
+//   background: image-url('backimage.JPG');
+//   background-size: cover;
+//   background-position: center;
+// }
