--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,14 +1,12 @@
 <div class="container">
-  <div class="row d-flex justify-content-center text-center">
-    <div class="text-box">
-      <h4 class="top-text">
-        Campageでは、キャンプ好きや興味のある方の交流の場を目指しています。<br>
-        キャンプレイアウトやグランピング体験をシェアすることで、<br>
-        これから始めたい方の参考となり後押しをします。<br>
-        グランピング施設を探している人やキャンプを始めたい人が簡単に情報収集できる。<br>
-        それが Campage
-      </h4>
-    </div>
+  <div class="row d-flex justify-content-center text-center text-box">
+    <h4 class="top-text">
+      Campageでは、キャンプ好きや興味のある方の交流の場を目指しています。<br>
+      キャンプレイアウトやグランピング体験をシェアすることで、<br>
+      これから始めたい方の参考となり後押しをします。<br>
+      グランピング施設を探している人やキャンプを始めたい人が簡単に情報収集できる。<br>
+      それが Campage
+    </h4>
   </div>
   <div class="row d-flex justify-content-center">
     <% @random.each do |post| %>
