--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,9 @@
 <div class="container">
-  <div class="row d-flex justify-content-center text-center">
-    <div class="text-box">
-      <h3 class="top-text">
-        自慢のキャンプレイアウトや、<br class="br-sp">
-        素敵なグランピング体験をみんなでシェアしよう！
-      </h3>
-    </div>
+  <div class="row d-flex justify-content-center text-center text-box">
+    <h3 class="top-text">
+      自慢のキャンプレイアウトや、<br class="br-sp">
+      素敵なグランピング体験をみんなでシェアしよう！
+    </h3>
   </div>
   <div class="row d-flex justify-content-center mt-5">
     <%= link_to "Login", new_user_session_path, class: "btn btn-outline-success login-btn" %>
