--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,10 +66,7 @@
   color: #CC9900;
 }
 
-@media screen and (max-width: 420px){
-.br-sp {display: none; }
-}
-
+// フッター下に固定
 body {
   display: flex;
   flex-flow: column;
@@ -79,6 +76,7 @@ body {
 main {
   flex: 1;
 }
+// ここまで
 
 .text-box {
   margin: 70px;
@@ -119,4 +117,55 @@ main {
 .table th,
 .table td {
   border:none;
+}
+
+// 投稿一覧
+.post-index {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+.sideber, .post-box {
+  margin-top: 20px;
+}
+.sideber{
+  margin-right: 50px;
+  position: sticky;
+  top: 70px;
+}
+.post-box{
+  width: 600px;
+}
+.post-boxes{
+  margin-bottom: 50px;
+  border-width: 1px;
+	border-color: #CCCCCC;
+	border-style: solid;
+}
+.user-name{
+  border-width: 1px;
+	border-color: #CCCCCC;
+	border-bottom-style: solid;
+	font-weight: bold;
+}
+.user-name, .post-title, .like-btn, .post-body, .post-comment-link, .time{
+  padding: 2px 15px;
+}
+.post-body{
+  width: 100%;
+}
+.slick{
+  width: 600px;
+}
+.slick img{
+  width: 100%;
+}
+// ここまで
+
+
+
+
+
+@media screen and (max-width: 420px){
+.br-sp {display: none; }
 }
