--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,48 +1,58 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3">
-      <% if user_signed_in? %>
-        <%= link_to user_path(@user.id) do %>
-          <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
-        <% end %>
-        <%= @user.name %>
+<div class="post-index">
+  <div>
+    <div class="sideber">
+    <% if user_signed_in? %>
+      <%= link_to user_path(@user.id) do %>
+        <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
       <% end %>
-    </div>
-    <div class="col-lg-9">
-      <% @posts.each do |post| %>
-        <div>
+      <%= @user.name %>
+    <% end %>
+  </div>
+  </div>
+
+
+  <div class="post-box">
+    <% @posts.each do |post| %>
+      <div class="post-boxes">
+        <div class="user-name">
           <%= link_to user_path(post.user.id) do %>
             <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
           <% end %>
           <%= post.user.name %>
         </div>
-        <div>
+        <div class="post-title">
           <%= post.title %>
         </div>
-        <div class="slick" style="width: 500px;">
+        <div class="slick">
           <% post.post_images.each do |image| %>
             <%= link_to post_path(image.post.id) do %>
-              <%= attachment_image_tag image, :image, style: "width: 100%" %>
+              <%= attachment_image_tag image, :image %>
             <% end %>
           <% end %>
         </div>
         <!--どの投稿も同じ部分テンプレートを使うので、グッドを押すと全ての投稿にグッドがついてしまうので、-->
         <!--部分テンプレート自体にidをつけることで、投稿ごとにグッドをすることができる。-->
-        <div class="like_btn_<%= post.id %>">
-          <%= render "likes/like", post: post %>
+        <div class="like-btn">
+          <div class="like_btn_<%= post.id %>">
+            <%= render "likes/like", post: post %>
+          </div>
         </div>
-        <div>
+
+        <div class="post-body">
           <%= post.body %>
         </div>
-        <div>
+
+        <div class="post-comment-link">
           <%= link_to "コメント#{post.comments.count}件",post_path(post.id) %>
         </div>
-        <div>
+
+        <div class="time">
           <i class="far fa-clock clock-icon"></i>
           <%= time_ago_in_words(post.created_at) %>前
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 </div>
+
 
