--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="post-index">
-  <div>
+  <div class="sideber-box">
     <div class="sideber">
     <% if user_signed_in? %>
       <%= link_to user_path(@user.id) do %>
