--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,61 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3">
-      <div>
-        <%= attachment_image_tag @user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
-        <%= @user.name %>
-      </div>
-      <div>
-        <%= @user.introduction %>
-      </div>
-      <% if current_user != @user %>
-        <div class="relationship_count">
-          <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
-        </div>
-        <div class="relationship">
-          <%= render "relationships/button", user: @user %>
-        </div>
-        <div>
-          <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
-        </div>
-      <% else %>
-        <div class="relationship_count">
-          <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
-        </div>
-        <div>
-          <%= link_to "edit", edit_user_path(current_user.id) %>
-        </div>
-        <div>
-          <%= link_to "DMリスト",rooms_path %>
-        </div>
-        <div>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-        </div>
-      <% end %>
+<div class="user-show">
+  <div class="user-inf">
+
+    <div class=profile-image>
+      <%= attachment_image_tag @user, :profile_image, size: '200x200', fallback: "no_image.jpg" %>
     </div>
-    <div class="col-lg-9">
-      <div class="mypage">
-        <% @posts.each do |post| %>
-          <% post.post_images.first(1).each do |image| %>
-            <%= link_to post_path(post.id) do %>
-              <%= attachment_image_tag image, :image %>
+
+    <div class="row-box">
+      <div class="row">
+        <div class="rowlist">
+          <h2><%= @user.name %></h2>
+        </div>
+        <% if current_user != @user %>
+          <div class="relationship_count">
+            <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+          </div>
+          <div class="relationship">
+            <%= render "relationships/button", user: @user %>
+          </div>
+          <div>
+            <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
+          </div>
+        <% else %>
+          <div class="rowlist">
+            <%= link_to edit_user_path(current_user.id) do %>
+              <i class="fas fa-user-edit"></i>
             <% end %>
-          <% end %>
+          </div>
+          <div class="rowlist">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          </div>
+      </div>
+      <div class="row">
+          <div class="relationship_count">
+            <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+          </div>
+          <div class="rowlist">
+            <%= link_to "DMリスト",rooms_path %>
+          </div>
         <% end %>
-    　</div>
+      </div>
+      <div class="row">
+        <div>
+          <%= @user.introduction %>
+        </div>
+      </div>
     </div>
   </div>
+
+  <div class="mypage">
+    <% @posts.each do |post| %>
+      <% post.post_images.first(1).each do |image| %>
+        <%= link_to post_path(post.id) do %>
+          <%= attachment_image_tag image, :image %>
+        <% end %>
+      <% end %>
+    <% end %>
+　</div>
 </div>
+
 
