--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
         <% end %>
       </div>
       <div class="row">
-        <div>
+        <div class="user-introduction">
           <%= @user.introduction %>
         </div>
       </div>
