--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row d-flex align-items-center justify-content-center login">
+  <div class="row d-flex align-items-center justify-content-center useredit">
     <%= form_with model: @user, local: true do |f| %>
       <table class="table">
         <tr>
