--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,57 +1,52 @@
-<div class="post-index">
-  <div class="sideber-box">
-    <div class="sideber">
-    <% if user_signed_in? %>
-      <%= link_to user_path(@user.id) do %>
-        <%= attachment_image_tag current_user, :profile_image, size: '70x70', fallback: "no_image.jpg" %>
-      <% end %>
-      <%= @user.name %>
-    <% end %>
-  </div>
-  </div>
-
-
-  <div class="post-box">
-    <% @posts.each do |post| %>
-      <div class="post-boxes">
-        <div class="user-name">
-          <%= link_to user_path(post.user.id) do %>
-            <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+<div class="container">
+  <div class="row mt-4">
+    <div class="col-lg-3">
+      <div class="sideber">
+        <% if user_signed_in? %>
+          <%= link_to user_path(@user.id) do %>
+            <%= attachment_image_tag current_user, :profile_image, size: '70x70', fallback: "no_image.jpg" %>
           <% end %>
-          <%= post.user.name %>
-        </div>
-        <div class="post-title">
-          <%= post.title %>
-        </div>
-        <div class="slick">
-          <% post.post_images.each do |image| %>
-            <%= link_to post_path(image.post.id) do %>
-              <%= attachment_image_tag image, :image %>
+          <%= @user.name %>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-lg-9">
+      <% @posts.each do |post| %>
+        <div class="post-boxes">
+          <div class="user-name">
+            <%= link_to user_path(post.user.id) do %>
+              <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
             <% end %>
-          <% end %>
-        </div>
-        <!--どの投稿も同じ部分テンプレートを使うので、グッドを押すと全ての投稿にグッドがついてしまうので、-->
-        <!--部分テンプレート自体にidをつけることで、投稿ごとにグッドをすることができる。-->
-        <div class="like-btn">
+            <%= post.user.name %>
+          </div>
+          <div class="post-title">
+            <%= post.title %>
+          </div>
+          <div class="slick">
+            <% post.post_images.each do |image| %>
+              <%= link_to post_path(image.post.id) do %>
+                <%= attachment_image_tag image, :image %>
+              <% end %>
+            <% end %>
+          </div>
+          <!--どの投稿も同じ部分テンプレートを使うので、グッドを押すと全ての投稿にグッドがついてしまうので、-->
+          <!--部分テンプレート自体にidをつけることで、投稿ごとにグッドをすることができる。-->
           <div class="like_btn_<%= post.id %>">
             <%= render "likes/like", post: post %>
           </div>
+          <div class="post-body">
+            <%= post.body %>
+          </div>
+          <div class="post-comment-link">
+            <%= link_to "コメント#{post.comments.count}件",post_path(post.id) %>
+          </div>
+          <div class="time">
+            <i class="far fa-clock clock-icon"></i>
+            <%= time_ago_in_words(post.created_at) %>前
+          </div>
         </div>
-
-        <div class="post-body">
-          <%= post.body %>
-        </div>
-
-        <div class="post-comment-link">
-          <%= link_to "コメント#{post.comments.count}件",post_path(post.id) %>
-        </div>
-
-        <div class="time">
-          <i class="far fa-clock clock-icon"></i>
-          <%= time_ago_in_words(post.created_at) %>前
-        </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
 
