--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,61 +1,64 @@
-<div class="user-show">
-  <div class="user-inf">
+<div class="container">
+  <div class="user-show">
+    <div class="user-inf">
 
-    <div class=profile-image>
-      <%= attachment_image_tag @user, :profile_image, size: '200x200', fallback: "no_image.jpg" %>
+      <div class=profile-image>
+        <%= attachment_image_tag @user, :profile_image, size: '200x200', fallback: "no_image.jpg" %>
+      </div>
+
+      <div class="row-box">
+        <div class="row">
+          <div class="rowlist">
+            <h2><%= @user.name %></h2>
+          </div>
+          <% if current_user != @user %>
+            <div class="relationship_count">
+              <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+            </div>
+            <div class="relationship">
+              <%= render "relationships/button", user: @user %>
+            </div>
+            <div>
+              <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
+            </div>
+          <% else %>
+            <div class="rowlist">
+              <%= link_to edit_user_path(current_user.id) do %>
+                <i class="fas fa-user-edit"></i>
+              <% end %>
+            </div>
+            <div class="rowlist">
+              <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="relationship_count">
+              <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+            </div>
+            <div class="rowlist">
+              <%= link_to "DMリスト",rooms_path %>
+            </div>
+          <% end %>
+        </div>
+        <div class="row">
+          <div class="user-introduction">
+            <%= @user.introduction %>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="row-box">
-      <div class="row">
-        <div class="rowlist">
-          <h2><%= @user.name %></h2>
-        </div>
-        <% if current_user != @user %>
-          <div class="relationship_count">
-            <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
-          </div>
-          <div class="relationship">
-            <%= render "relationships/button", user: @user %>
-          </div>
-          <div>
-            <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
-          </div>
-        <% else %>
-          <div class="rowlist">
-            <%= link_to edit_user_path(current_user.id) do %>
-              <i class="fas fa-user-edit"></i>
-            <% end %>
-          </div>
-          <div class="rowlist">
-            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-          </div>
-      </div>
-      <div class="row">
-          <div class="relationship_count">
-            <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
-          </div>
-          <div class="rowlist">
-            <%= link_to "DMリスト",rooms_path %>
-          </div>
-        <% end %>
-      </div>
-      <div class="row">
-        <div class="user-introduction">
-          <%= @user.introduction %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="mypage">
-    <% @posts.each do |post| %>
-      <% post.post_images.first(1).each do |image| %>
-        <%= link_to post_path(post.id) do %>
-          <%= attachment_image_tag image, :image %>
+    <div class="mypage">
+      <% @posts.each do |post| %>
+        <% post.post_images.first(1).each do |image| %>
+          <%= link_to post_path(post.id) do %>
+            <%= attachment_image_tag image, :image %>
+          <% end %>
         <% end %>
       <% end %>
-    <% end %>
-　</div>
+  　</div>
+  </div>
 </div>
+
 
 
