--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,7 +16,7 @@
         <div class="body-form">
           <%= f.text_area :body, placeholder: "道具の紹介や施設の紹介など" %>
         </div>
-        <div　class="botton-form">
+        <div　class="btn-form">
           <%= f.submit "シェア",  class: "share-botton" %>
         </div>
       </div>
