--- a/app/views/posts/ranking.html.erb
+++ b/app/views/posts/ranking.html.erb
@@ -1,19 +1,16 @@
-<h2>グッド!!が多い投稿</h2>
-<div>
-  <div>
-    <%= render "good_ranking", posts_good_ranking: @posts_good_ranking %>
+<div class="container">
+  <h3>グッド!!が多い投稿</h3>
+  <div class="row d-flex">
+      <%= render "good_ranking", posts_good_ranking: @posts_good_ranking %>
+    <div>
+      <%= link_to "一覧で見る", posts_good_ranking_path %>
+    </div>
   </div>
-  <div>
-    <%= link_to "一覧で見る", posts_good_ranking_path %>
-  </div>
-</div>
-
-<h2>閲覧数が多い投稿</h2>
-<div>
-  <div>
-    <%= render "pv_ranking", posts_pv_ranking: @posts_pv_ranking %>
-  </div>
-  <div>
-    <%= link_to "一覧で見る", posts_pv_ranking_path %>
+  <h3>閲覧数が多い投稿</h3>
+  <div class="row d-flex">
+      <%= render "pv_ranking", posts_pv_ranking: @posts_pv_ranking %>
+    <div>
+      <%= link_to "一覧で見る", posts_pv_ranking_path %>
+    </div>
   </div>
 </div>
