--- a/app/views/posts/_pv_ranking.html.erb
+++ b/app/views/posts/_pv_ranking.html.erb
@@ -1,6 +1,6 @@
 <% posts_pv_ranking.each do |post| %>
-  <div class="col-lg-3">
-    <div class="user-name">
+  <div class="col-lg-3 d-flex flex-column postranking">
+    <div class="ranking-user-name">
       <%= link_to user_path(post.user.id) do %>
         <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
         <%= post.user.name %>
@@ -10,7 +10,7 @@
       <%= post.title %>
     </div>
 
-    <div class="mypage">
+    <div class="mb-auto ranking-post">
       <% post.post_images.first(1).each do |image| %>
         <%= link_to post_path(post.id) do %>
           <%= attachment_image_tag image, :image %>
@@ -18,6 +18,7 @@
       <% end %>
   　</div>
   　<div>
+  　  <i class="far fa-eye"></i>
   　  <%= post.impressions_count %>
   　</div>
   　<div>
