--- a/app/views/posts/pv_ranking.html.erb
+++ b/app/views/posts/pv_ranking.html.erb
@@ -1,4 +1,9 @@
-<h2>閲覧数が多い投稿</h2>
-<div>
-  <%= render "pv_ranking", posts_pv_ranking: @posts_pv_ranking %>
+<div class="container">
+  <h4>閲覧数が多い投稿</h4>
+  <div class="row">
+    <%= render "pv_ranking", posts_pv_ranking: @posts_pv_ranking %>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <%= paginate @posts_pv_ranking, theme: 'twitter-bootstrap-4' %>
+  </div>
 </div>
