--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,6 +107,13 @@ main {
   width: 33%;
   height: auto;
 }
+.follow-btn a{
+  font-size: 12pt;
+  color: white;
+}
+.search-box{
+  margin: 20px 0;
+}
 // ここまで
 // slick設定
 .slick-prev:before, .slick-next:before {
