--- a/app/views/searches/_users_index.html.erb
+++ b/app/views/searches/_users_index.html.erb
@@ -1,6 +1,15 @@
-<% users.each do |user| %>
-  <%= link_to user_path(user) do %>
-    <%= attachment_image_tag user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
-    <%= user.name %>
+<table class="table d-flex justify-content-center">
+  <% users.each do |user| %>
+    <tr>
+      <td class="ranking-user-name">
+        <%= link_to user_path(user) do %>
+          <%= attachment_image_tag user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+          <%= user.name %>
+        <% end %>
+      </td>
+      <td>
+        <%= render "relationships/button", user: user %>
+      </td>
+    </tr>
   <% end %>
-<% end %>
+</table>
