--- a/app/views/searches/_users_index.html.erb
+++ b/app/views/searches/_users_index.html.erb
@@ -8,7 +8,9 @@
         <% end %>
       </td>
       <td>
-        <%= render "relationships/button", user: user %>
+        <div class="relationship">
+          <%= render "relationships/button", user: user %>
+        </div>
       </td>
     </tr>
   <% end %>
