--- a/app/views/relationships/_count.html.erb
+++ b/app/views/relationships/_count.html.erb
@@ -1,4 +1,4 @@
-<% if current_page?(user_path) %>
+<% if current_page?(user_path(current_user)) %>
   <div class="rowlist">
     <%= link_to "フォロー中", follows_user_path(user.id) %>
     <%= following_users.count %>
