--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,7 +1,7 @@
 <% visiter = notification.visiter %>
 <% visited = notification.visited %>
 
-<div>
+<div class="notification-user-name">
   <%= link_to user_path(visiter) do %>
     <%= attachment_image_tag visiter, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
     <%= visiter.name %>
@@ -34,21 +34,3 @@
     <%= time_ago_in_words(notification.created_at).upcase %>前
   </div>
 </div>
-
-
-
-<% if false %>
-<% visiter = notification.visiter %>
-<% post = notification.post %>
-
-<div class="user-view clearfix ">
-  <%= link_to user_path(notification.visiter) do %>
-    <%= attachment_image_tag visiter, :profile_image, size: "50x50", fallback: "no_image.jpg", size: "50x50", class:"profile-img-circle" %>
-  <% end %>
-  <%= notification_form(notification) %><span class="moderate-font"><%= " (#{time_ago_in_words(notification.created_at)} 前)" %></span>
-  <br>
-  <% if !@comment.nil? %>
-    <p class="moderate-font text-center" style="color: #C0C0C0;"><%= @comment %></p>
-  <% end %>
-</div>
-<% end %>
