--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,81 @@
 <div class="container">
   <div class="user-show">
-    <div class="user-inf">
+    <div class="row user-inf">
+      <div class="col-lg-3 profile-image">
+        <%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg" %>
+      </div>
+      <div class="col-lg-9">
+        <% if current_user != @user %>
+          <div class="row">
+            <div class="col">
+              <h2><%= @user.name %></h2>
+            </div>
+          </div>
+          <div class="row relationship_count">
+            <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+            <div class="col-lg-4 relationship">
+              <%= render "relationships/button", user: @user %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div>
+                <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
+              </div>
+            </div>
+          </div>
+        <% else %>
+          <div class="row">
+            <div class="col-lg-4">
+              <h2><%= @user.name %></h2>
+            </div>
+            <div class="col-lg-4">
+              <%= link_to edit_user_path(current_user.id) do %>
+                <i class="fas fa-user-edit"></i>
+              <% end %>
+            </div>
+            <div class="col-lg-4">
+              <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+            </div>
+          </div>
+          <div class="row relationship_count">
+              <%= render "relationships/count", user: @user, following_users: @following_users, follower_users: @follower_users %>
+            <div class="col-lg-4">
+              <%= link_to "DMリスト",rooms_path %>
+            </div>
+          </div>
+        <% end %>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="user-introduction">
+              <%= @user.introduction %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mypage">
+      <% @posts.each do |post| %>
+        <% post.post_images.first(1).each do |image| %>
+          <%= link_to post_path(post.id) do %>
+            <%= attachment_image_tag image, :image %>
+          <% end %>
+        <% end %>
+      <% end %>
+  　</div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+<% if false %>
 
       <div class=profile-image>
         <%= attachment_image_tag @user, :profile_image, size: '200x200', fallback: "no_image.jpg" %>
@@ -62,3 +137,4 @@
 
 
 
+<% end %>
