--- a/app/views/users/_message_button.html.erb
+++ b/app/views/users/_message_button.html.erb
@@ -1,16 +1,22 @@
 <% if user_signed_in? %>
   <% if current_user.id != user.id %>    <!--現在ログインしているユーザーではない場合-->
     <% if isroom == true %>    <!--既にルームが作成されていれば-->
-      <%= link_to "ダイレクトメッセージ", room_path(roomid) %>    <!--そのチャットルームに遷移するボタンを表示-->
+      <div class="btn btn-dark">
+        <%= link_to "メッセージ", room_path(roomid) %>    <!--そのチャットルームに遷移するボタンを表示-->
+      </div>
     <% else %>  <!--ルームがなければ-->
       <%= form_with model: room, local: true do |f| %>    <!--roomsテーブルに情報を送信-->
         <%= fields_for entry do |r| %>    <!--entriesテーブルに情報を送信-->
           <%= r.hidden_field :user_id, value: user.id %>  <!--entriesテーブルにuser_idを含める-->
         <% end %>
-        <%= f.submit "チャットを始める" %>
+        <div class="btn btn-dark">
+          <%= f.submit "チャットを始める" %>
+        </div>
       <% end %>
     <% end %>
   <% end %>
 <% else %>
-  <%= link_to "チャットを始める", new_user_session_path, data: {confirm: "チャットを始めるにはログインが必要です。ページを移動しますか？"} %>
+  <div class="btn btn-dark">
+    <%= link_to "チャットを始める", new_user_session_path, data: {confirm: "チャットを始めるにはログインが必要です。ページを移動しますか？"} %>
+  </div>
 <% end %>
