--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,60 +1,57 @@
 <div class="container">
-  <div class="user-show">
-    <div class="row user-inf">
-      <div class="col-lg-3 profile-image">
-        <%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg" %>
-      </div>
-      <div class="col-lg-9">
-        <% if current_user != @user %>
-          <div class="row">
-            <div class="col">
-              <h2><%= @user.name %></h2>
-            </div>
-          </div>
-          <div class="row relationship_count">
-            <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
-            <div class="col-lg-4 relationship">
-              <%= render "relationships/button", user: @user %>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4">
-              <div>
-                <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
-              </div>
-            </div>
-          </div>
-        <% else %>
-          <div class="row">
-            <div class="col-lg-4">
-              <h2><%= @user.name %></h2>
-            </div>
-            <div class="col-lg-4">
-              <%= link_to edit_user_path(current_user.id) do %>
-                <i class="fas fa-user-edit"></i>
-              <% end %>
-            </div>
-            <div class="col-lg-4">
-              <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-            </div>
-          </div>
-          <div class="row relationship_count">
-              <%= render "relationships/count", user: @user, following_users: @following_users, follower_users: @follower_users %>
-            <div class="col-lg-4">
-              <%= link_to "DMリスト",rooms_path %>
-            </div>
-          </div>
-        <% end %>
+  <div class="row user-inf">
+    <div class="col-lg-3 col-md-5 profile-image">
+      <%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg" %>
+    </div>
+    <div class="col-lg-9 col-md-7">
+      <% if current_user != @user %>
         <div class="row">
-          <div class="col-lg-6">
-            <div class="user-introduction">
-              <%= @user.introduction %>
-            </div>
+          <div class="col-lg-6 col-md-6">
+            <h3><%= @user.name %></h3>
+          </div>
+        </div>
+        <div class="row relationship_count">
+          <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+        </div>
+        <div class="row">
+          <div class="col-lg-5 col-md-5 relationship">
+            <%= render "relationships/button", user: @user %>
+          </div>
+          <div class="col-lg-5 col-md-5">
+            <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
+          </div>
+        </div>
+      <% else %>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <h3><%= @user.name %></h3>
+          </div>
+          <div class="col-lg-4 col-md-3">
+            <%= link_to edit_user_path(current_user.id) do %>
+              <i class="fas fa-user-edit"></i>
+            <% end %>
+          </div>
+          <div class="col-lg-4 col-md-3">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          </div>
+        </div>
+        <div class="row relationship_count">
+            <%= render "relationships/count", user: @user, following_users: @following_users, follower_users: @follower_users %>
+          <div class="col-lg-4 col-md-4">
+            <%= link_to "DMリスト",rooms_path %>
+          </div>
+        </div>
+      <% end %>
+      <div class="row">
+        <div class="col-lg-6 col-md-6">
+          <div class="user-introduction">
+            <%= @user.introduction %>
           </div>
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="row">
     <div class="mypage">
       <% @posts.each do |post| %>
         <% post.post_images.first(1).each do |image| %>
